Remove flex alignment from main-content to fix sizing

--- a/css/css.css
+++ b/css/css.css
@@ -247,9 +247,6 @@ body::before {
     flex: 1;
     width: 100%;
     max-width: 1300px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
 }
 
 .sidebar-ad {
